--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="zag_1">Без окон, без дверей, полна жопа огурцов?</string>
     <string name="zag_2">Два кольца, два конца,по середине гвоздик?</string>
     <string name="zag_3">Кто ее раздевает,тот слезы проливает?</string>
-    <string name="otv_zag_1">da</string>
-    <string name="otv_zag_2">nojnicy</string>
-    <string name="otv_zag_3">lukovica</string>
+    <string name="otv_zag_1">да</string>
+    <string name="otv_zag_2">ножницы</string>
+    <string name="otv_zag_3">луковица</string>
 </resources>
